--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 c = e * a;
                 document.getElementById("c").value = c;
             }
+            if (c != "" && e != "") {
+                a = c / e;
+                document.getElementById("c").value = c;
+            }
+
             
         }
     </script>
