--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 µ = G * M;
                 document.getElementById("µ").value = µ;
             }
+            if (a != "" && e != "") {
+                p = a * (1- e*2);
+                document.getElementById("p").value = p;
+            }
         }
     </script>
   </body>
