--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="mb-3">
             <label for="acceleration" class="form-label">angle between v and position</label>
-            <input type="text" class="form-control" id="angle_r_v" placeholder="°" onchange="calculateAll()">
+            <input type="text" class="form-control" id="angle_r_v" placeholder="rad" onchange="calculateAll()">
         </div>
         <div class="mb-3">
             <label for="acceleration" class="form-label">position</label>
