--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
                     <input type="text" class="form-control" id="h" placeholder=" [m]" onchange="calculateAll()">
                 </div>
                 <div class="mb-3">
+                    <label for="acceleration" class="form-label">r apogee</label>
+                    <input type="text" class="form-control" id="apogee" placeholder=" [m]" onchange="calculateAll()">
+                </div>
+                <div class="mb-3">
+                    <label for="acceleration" class="form-label">r perigee</label>
+                    <input type="text" class="form-control" id="perigee" placeholder=" [m]" onchange="calculateAll()">
+                </div>
+                <div class="mb-3">
+                    <label for="" class="form-label">period of the orbit</label>
+                    <input type="text" class="form-control" id="period" placeholder="period of the orbit" onchange="calculateAll()">
+                </div>
+
+                <div class="mb-3">
                     <label for="v" class="form-label">speed</label>
                     <input type="text" class="form-control" id="v0" placeholder=" [m/sec]" onchange="calculateAll()">
                     <input type="text" class="form-control" id="v1" placeholder=" [m/sec]" onchange="calculateAll()">
@@ -115,35 +128,44 @@
             let v1 = document.getElementById("v1").value;
             let v2 = document.getElementById("v2").value;
 
+            let h0 = document.getElementById("h0").value;
+            let h1 = document.getElementById("h1").value;
+            let h2 = document.getElementById("h2").value;
+
             let v = document.getElementById("v").value;
             let r = document.getElementById("r").value;
+
+            
+            let apogee = document.getElementById("apogee").value;
+            let perigee = document.getElementById("perigee").value;
             let angle_r_v = document.getElementById("angle_r_v").value;
+
 
             const G = 6.67430e-11;
 
             // e = c / a
-            if (c != "" && a != "") {
+            if (c !== "" && a !== "") {
                 e = c / a;
                 document.getElementById("e").value = e;
             }
-            if (e != "" && a != "") {
+            if (e !== "" && a !== "") {
                 c = e * a;
                 document.getElementById("c").value = c;
             }
-            if (c != "" && e != "") {
+            if (c !== "" && e !== "") {
                 a = c / e;
                 document.getElementById("c").value = c;
             }
-            if (M != "") {
+            if (M !== "") {
                 µ = G * M;
                 document.getElementById("µ").value = µ;
             }
-            if (a != "" && e != "") {
+            if (a !== "" && e !== "") {
                 p = a * (1- e*2);
                 document.getElementById("p").value = p;
             }
 
-            if (v0 != "" && v1 != "" &&v2 != "" && pos0 != "" && pos1 != "" && pos2 != "") {
+            if (v0 !== "" && v1 !== "" &&v2 !== "" && pos0 !== "" && pos1 !== "" && pos2 !== "") {
                 h0 = pos1 * v2 - pos2 * v1;
                 h1 = pos2 * v0 - pos0 * v2;
                 h2 = pos0*v1-pos1*v0;
@@ -151,29 +173,37 @@
                 document.getElementById("h1").value = h1;
                 document.getElementById("h2").value = h2;
             }
-            if (v0 != "" && v1 != "" &&v2 != "") {
+            if (v0 !== "" && v1 !== "" &&v2 !== "") {
                 v = Math.sqrt(v0 * v0 + v1 * v1 + v2 * v2);
                 document.getElementById("v").value = v;
             }
-            if (pos0 != "" && pos1 != "" && pos2 != "") {
+            if (pos0 !== "" && pos1 !== "" && pos2 !== "") {
                 r = Math.sqrt(pos0 * pos0 + pos1 * pos1 + pos2 * pos2);
                 document.getElementById("r").value = r;
             }
-            if (v != "" && µ != "" && r != "") {
+            if (v !== "" && µ !== "" && r !== "") {
                 E = v*v/2 - µ / r;
                 document.getElementById("E").value = E;
             }
-            if (v != "" && r != "" && angle_r_v != "") {
+            if (v !== "" && r !== "" && angle_r_v !== "") {
                 h = r * v * Math.sin(angle_r_v);
                 document.getElementById("h").value = h;
             }
-            if (h0 != "" && h1 != "" && h2 != "") {
+            if (h0 !== "" && h1 !== "" && h2 !== "") {
                 h = Math.sqrt(h0 * h0 + h1*h1 + h2*h2);
                 document.getElementById("h").value = h;
             }
-            if (h != "" && E != "" && µ != "") {
+            if (h !== "" && E !== "" && µ !== "") {
                 e = Math.sqrt(1 + 2*E*h*h/(µ*µ))
                 document.getElementById("e").value = e;
+            }
+            if (apogee !== "" && perigee !== "") {
+                a = (parseInt(apogee) + parseInt(perigee)) / 2;
+                document.getElementById("a").value = a;
+            }
+            if (apogee !== "" && µ !== "") {
+                period = 2*Math.PI * (parseInt(apogee)) / Math.sqrt(µ);
+                document.getElementById("period").value = period;
             }
         }
     </script>
